--- a/package.json
+++ b/package.json
@@ -41,8 +41,9 @@
     "ember-addon"
   ],
   "dependencies": {
-    "ember-cli-htmlbars": "^1.0.10",
-    "ember-cli-babel": "^5.1.7"
+    "ember-admin-theme-manager": "github:knownasilya/ember-admin-theme-manager",
+    "ember-cli-babel": "^5.1.7",
+    "ember-cli-htmlbars": "^1.0.10"
   },
   "peerDependencies": {
     "ember-engines": "*"
